# openaltium

./: .gitignore  Makefile.am  README  configure.ac  convert.sh  read_data.c
libopenaltium/: Makefile.am  content-parser.c  content-parser.h  main.c  models.c  models.h  parameters.c  parameters.h  pcblib-data.c  pcblib-data.h  pcblib.c  pcblib.h  schlib-data.c  schlib-data.h  schlib.c  schlib.h
